--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -47,11 +47,12 @@
 | Probiotics complex          | Various       | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement           |
 | L-Carnosine                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | Potassium citrate           | 4g            | Breakfast       | Oral | RDA                                                     |
+| Astaxanthin           | 15mg            | Breakfast       | Oral | Various                                                     |
 | Spironolactone              | 200mg         | Lunch           | Oral | GID                                                     |
 | Estradiol Valerate          | 2mg           | Lunch           | Oral | GID                                                     |
 | L-Tryptophan                | 8g            | Dinner          | Oral | Schizophrenia, mood and sleep and cognitive enhancement |
 | Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
-| Kratom                      | 2g            | Every 4 hours   | Oral | Mood enhancement                                        |
-| Caffeine                    | 30mg - 240mg  | Every other day | Oral | Cognitive and mood enhancement                          |
-| DMHA                        | 200mg - 400mg | Every other day | Oral | Cognitive and mood enhancement                          |
+| Kratom                      | 2g            | 15g - 20g per day   | Oral | Mood enhancement                                        |
+| Caffeine                    | 30mg - 120mg  | Every day | Oral | Cognitive and mood enhancement                          |
+| DMHA                        | 200mg - 400mg | Occasionally | Oral | Cognitive and mood enhancement                          |
