--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -15,6 +15,7 @@
 | --------------------------- | ------------- | --------------- | ---- | ------------------------------------------------------- |
 | Multivitamin (26 nutrients) | 1 pill        | Breakfast       | Oral | RDA                                                     |
 | Calcium                     | 800mg         | Breakfast       | Oral | RDA                                                     |
+| Magnesium Orotate                    | 750mg         | Breakfast       | Oral | RDA                                                     |
 | Creatine                    | 5g            | Breakfast       | Oral | Cognitive enhancement, RDA                              |
 | AlphaGPC                    | 650mg         | Breakfast       | Oral | Cognitive enhancement, RDA                              |
 | Metformin                   | 500mg         | Breakfast       | Oral | Longevity                                               |
@@ -41,6 +42,7 @@
 | Selegiline                  | 5mg           | Breakfast       | Oral | Cognitive enhancement                                   |
 | Probiotics complex          | Various       | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement           |
 | L-Carnosine                 | 1g            | Breakfast       | Oral | Longevity                                               |
+| Spermidine                 | 20mg            | Breakfast       | Oral | Longevity                                               |
 | Potassium citrate           | 4g            | Breakfast       | Oral | RDA                                                     |
 | Astaxanthin           | 15mg            | Breakfast       | Oral | Various                                                     |
 | Spironolactone              | 200mg         | Lunch           | Oral | GID                                                     |
