--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -44,7 +44,8 @@
 | L-Carnosine                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | Spermidine                 | 20mg            | Breakfast       | Oral | Longevity                                               |
 | Potassium citrate           | 4g            | Breakfast       | Oral | RDA                                                     |
-| Astaxanthin           | 15mg            | Breakfast       | Oral | Various                                                     |
+| Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity                                                     |
+| Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
 | Spironolactone              | 200mg         | Lunch           | Oral | GID                                                     |
 | Estradiol Valerate          | 2mg           | Lunch           | Oral | GID                                                     |
 | L-Tryptophan                | 8g            | Dinner          | Oral | Schizophrenia, mood and sleep and cognitive enhancement |
