--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -1,14 +1,18 @@
 # Condititions
 - Schizophrenia
-- GID
+- Gender dysphoria
+- Probably autism, according to a psych (probably Asperger's)
 
 # Goals
+- Get RDAs of essential nutrients
 - Treat schizophrenia and GID
 - Longevity
 - Mood enhancement
 - Cognitive enhancement
 - Memory enhancement
-- Get RDAs of essential nutrients
+- Improve joint health
+- Improve skin health
+- Increase stress resistance
 
 # Stack
 | Substance                   | Amount        | When?           | ROA  | For?                                                    |
@@ -44,13 +48,13 @@
 | L-Carnosine                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | Spermidine                 | 20mg            | Breakfast       | Oral | Longevity                                               |
 | Potassium citrate           | 4g            | Breakfast       | Oral | RDA                                                     |
-| Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity                                                     |
+| Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity, skin health                                                     |
 | Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
 | Spironolactone              | 200mg         | Lunch           | Oral | GID                                                     |
 | Estradiol Valerate          | 2mg           | Lunch           | Oral | GID                                                     |
-| L-Tryptophan                | 8g            | Dinner          | Oral | Schizophrenia, mood and sleep and cognitive enhancement |
+| L-Tryptophan                | 4g            | Lunch          | Oral | Schizophrenia, mood and cognitive enhancement |
 | Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
-| Kratom                      | 2g            | 15g - 20g per day   | Oral | Mood enhancement                                        |
-| Caffeine                    | 30mg - 120mg  | Every day | Oral | Cognitive and mood enhancement                          |
+| Kratom                      | 5g            | QID   | Oral | Mood enhancement                                        |
+| Caffeine                    | 200mg - 300mg  | Daily | Oral | Cognitive and mood enhancement                          |
 | DMHA                        | 200mg - 400mg | Occasionally | Oral | Cognitive and mood enhancement                          |
