--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -27,10 +27,10 @@
 | CoQ10                       | ?             | Breakfast       | Oral | Longevity                                               |
 | Glucosamine                 | 888mg         | Breakfast       | Oral | Longevity, joint health                                 |
 | Lemon Balm                  | 1g            | Breakfast       | Oral | Anxiety                                                 |
-| Spironolactone              | 200mg         | Breakfast       | Oral | GID                                                     |
-| Estradiol Valerate          | 2mg           | Breakfast       | Oral | GID                                                     |
+| Spironolactone              | 200mg         | Breakfast       | Oral | GD                                                     |
+| Estradiol Valerate          | 2mg           | Breakfast       | Oral | GD                                                     |
 | Cod liver oil               | 2g            | Breakfast       | Oral | Schizophrenia, RDA, longevity                           |
-| Boron                       | 10mg          | Breakfast       | Oral | Cognitive and mood enhancement                          |
+| Boron                       | 10mg          | Breakfast       | Oral | GD                          |
 | Ginko Biloba extract        | 12000mg       | Breakfast       | Oral | Schizophrenia                                           |
 | Sarcosine                   | 4g            | Breakfast       | Oral | Schizophrenia                                           |
 | NAC                         | 2g            | Breakfast       | Oral | Longevity, schizophrenia                                |
@@ -50,8 +50,8 @@
 | Potassium citrate           | 4g            | Breakfast       | Oral | RDA                                                     |
 | Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity, skin health                                                     |
 | Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
-| Spironolactone              | 200mg         | Lunch           | Oral | GID                                                     |
-| Estradiol Valerate          | 2mg           | Lunch           | Oral | GID                                                     |
+| Spironolactone              | 200mg         | Lunch           | Oral | GD                                                     |
+| Estradiol Valerate          | 2mg           | Lunch           | Oral | GD                                                     |
 | L-Tryptophan                | 4g            | Lunch          | Oral | Schizophrenia, mood and cognitive enhancement |
 | Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
