--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -24,35 +24,35 @@
 | AlphaGPC                    | 650mg         | Breakfast       | Oral | Cognitive enhancement, RDA                              |
 | Metformin                   | 500mg         | Breakfast       | Oral | Longevity                                               |
 | Quercetine                  | 500mg         | Breakfast       | Oral | Longevity                                               |
-| CoQ10                       | ?             | Breakfast       | Oral | Longevity                                               |
 | Glucosamine                 | 888mg         | Breakfast       | Oral | Longevity, joint health                                 |
-| Lemon Balm                  | 1g            | Breakfast       | Oral | Anxiety                                                 |
 | Spironolactone              | 200mg         | Breakfast       | Oral | GD                                                     |
 | Estradiol Valerate          | 2mg           | Breakfast       | Oral | GD                                                     |
 | Cod liver oil               | 2g            | Breakfast       | Oral | Schizophrenia, RDA, longevity                           |
 | Boron                       | 10mg          | Breakfast       | Oral | GD                          |
 | Ginko Biloba extract        | 12000mg       | Breakfast       | Oral | Schizophrenia                                           |
-| Sarcosine                   | 2g            | Breakfast       | Oral | Schizophrenia                                           |
-| NAC                         | 2g            | Breakfast       | Oral | Longevity, schizophrenia                                |
-| Taurine                     | 4g            | Breakfast       | Oral | Longevity, schizophrenia                                |
 | Resveratrol                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | NMN                         | 1g            | Breakfast       | Oral | Longevity                                               |
 | Black pepper extract        | 100mg         | Breakfast       | Oral | Nutrient absorption                                     |
 | Avocado oil (oleic acid)    | 1g            | Breakfast       | Oral | Longevity                                               |
-| Glycine                     | 4g            | Breakfast       | Oral | Schizophrenia, longevity                                |
-| L-Tyrosine                  | 4g            | Breakfast       | Oral | Schizophrenia                                           |
 | Asprin                      | 75mg          | Breakfast       | Oral | Heart attack/stroke prevention                          |
 | Rhodiola Rosea              | 1g            | Breakfast       | Oral | Stress resistance                                       |
 | Selegiline                  | 5mg           | Breakfast       | Oral | Cognitive enhancement                                   |
 | Probiotics complex          | Various       | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement           |
 | L-Carnosine                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | Spermidine                 | 20mg            | Breakfast       | Oral | Longevity                                               |
-| Potassium citrate           | 2g            | Breakfast       | Oral | RDA                                                     |
 | Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity, skin health                                                     |
 | Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
 | Spironolactone              | 200mg         | Lunch           | Oral | GD                                                     |
 | Estradiol Valerate          | 2mg           | Lunch           | Oral | GD                                                     |
 | L-Tryptophan                | 4g            | Lunch          | Oral | Schizophrenia, mood and cognitive enhancement |
+| Sarcosine                   | 2g            | Lunch       | Oral | Schizophrenia                                           |
+| NAC                         | 2g            | Lunch       | Oral | Longevity, schizophrenia                                |
+| Taurine                     | 4g            | Lunch       | Oral | Longevity, schizophrenia                                |
+| Glycine                     | 4g            | Lunch       | Oral | Schizophrenia, longevity                                |
+| L-Tyrosine                  | 4g            | Lunch       | Oral | Schizophrenia                                           |
+| Lemon Balm                  | 1g            | Lunch       | Oral | Anxiety                                                 |
+| Potassium citrate           | 2g            | Lunch       | Oral | RDA                                                     |
+| CoQ10                       | ?             | Lunch       | Oral | Longevity                                               |
 | Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
 | Kratom                      | 5g            | QID   | Oral | Mood enhancement                                        |
