--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -44,7 +44,6 @@
 | Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
 | Spironolactone              | 200mg         | Lunch           | Oral | GD                                                     |
 | Estradiol Valerate          | 2mg           | Lunch           | Oral | GD                                                     |
-| L-Tryptophan                | 4g            | Lunch          | Oral | Schizophrenia, mood and cognitive enhancement |
 | Sarcosine                   | 2g            | Lunch       | Oral | Schizophrenia                                           |
 | NAC                         | 2g            | Lunch       | Oral | Longevity, schizophrenia                                |
 | Taurine                     | 4g            | Lunch       | Oral | Longevity, schizophrenia                                |
@@ -53,6 +52,7 @@
 | Lemon Balm                  | 1g            | Lunch       | Oral | Anxiety                                                 |
 | Potassium citrate           | 2g            | Lunch       | Oral | RDA                                                     |
 | CoQ10                       | ?             | Lunch       | Oral | Longevity                                               |
+| L-Tryptophan                | 4g            | Dinner          | Oral | Schizophrenia, mood and cognitive enhancement |
 | Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
 | Kratom                      | 5g            | QID   | Oral | Mood enhancement                                        |
