--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -5,7 +5,7 @@
 
 # Goals
 - Get RDAs of essential nutrients
-- Treat schizophrenia and GID
+- Treat schizophrenia and GD
 - Longevity
 - Mood enhancement
 - Cognitive enhancement
