--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -1,21 +1,25 @@
 # Condititions
 - Schizophrenia
 - Gender dysphoria
-- Probably autism, according to a psych (probably Asperger's)
+- Undiagnosed autism, suspected by psychologist
 
 # Goals
 - Get RDAs of essential nutrients
-- Treat schizophrenia and GD
-- Longevity
-- Mood enhancement
-- Cognitive enhancement
-- Memory enhancement
-- Improve joint health
-- Improve skin health
+- Treat conditions
+- Increase longevity
+- Enhance mood, cognitive ability and memory
+- Improve physical health
+- Prevent age related and non-age related illnesses
 - Increase stress resistance
+- Improve sleep quality
+
+# Tools
+- Smartwatch which can measure SpO2, HR, sleep quality, stress level and track sports activities
+- Scales
+- BP monitor
 
 # Stack
-| Substance                   | Amount        | When?           | ROA  | For?                                                    |
+| Substance                   | Amount        | When?           | ROA  | Purpose                                                    |
 | --------------------------- | ------------- | --------------- | ---- | ------------------------------------------------------- |
 | Multivitamin (26 nutrients) | 1 pill        | Breakfast       | Oral | RDA                                                     |
 | Calcium                     | 800mg         | Breakfast       | Oral | RDA                                                     |
@@ -34,7 +38,7 @@
 | NMN                         | 1g            | Breakfast       | Oral | Longevity                                               |
 | Black pepper extract        | 100mg         | Breakfast       | Oral | Nutrient absorption                                     |
 | Avocado oil (oleic acid)    | 1g            | Breakfast       | Oral | Longevity                                               |
-| Asprin                      | 75mg          | Breakfast       | Oral | Heart attack/stroke prevention                          |
+| Asprin                      | 75mg          | Breakfast       | Oral | Illness prevention (heart attacks and strokes)                          |
 | Rhodiola Rosea              | 1g            | Breakfast       | Oral | Stress resistance                                       |
 | Selegiline                  | 5mg           | Breakfast       | Oral | Cognitive enhancement                                   |
 | Probiotics complex          | Various       | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement           |
@@ -54,6 +58,26 @@
 | L-Tryptophan                | 4g            | Dinner          | Oral | Schizophrenia, mood and cognitive enhancement |
 | Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
-| Kratom                      | 5g            | QID   | Oral | Mood enhancement                                        |
-| Caffeine                    | 200mg - 300mg  | Daily | Oral | Cognitive and mood enhancement                          |
-| DMHA                        | 200mg - 400mg | Occasionally | Oral | Cognitive and mood enhancement                          |
+| Kratom                      | 4g            | QID   | Oral | Mood enhancement, sleep                                        |
+| Caffeine                    | 100mg - 200mg  | Daily | Oral | Cognitive and mood enhancement                          |
+| DMHA                        | 200mg | Occasionally | Oral | Cognitive and mood enhancement                          |
+
+# Diet
+Mostly unprocessed:
+- Chicken
+- Tortillas
+- Noodles
+- Eggs
+- Broccoli
+- Grapefruit
+- Spring onions
+- Cucumbers
+- Tomatoes
+- Red onions
+- Various sauces and condiments
+- Soy milk
+- Olive oil
+- Cod
+- Chips
+- Vegan cheese
+- Sugar
