--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -59,7 +59,7 @@
 | Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
 | Kratom                      | 4g            | QID   | Oral | Mood enhancement, sleep                                        |
-| Caffeine                    | 100mg - 200mg  | Daily | Oral | Cognitive and mood enhancement                          |
+| Green tea                    | 3 cups - 5 cups  | Daily | Oral | Cognitive and mood enhancement, illness prevention (CVD)                          |
 | DMHA                        | 200mg | Occasionally | Oral | Cognitive and mood enhancement                          |
 
 # Diet
