Added vendor search

--- a/Stacks/v3.md
+++ b/Stacks/v3.md
@@ -40,18 +40,21 @@
 | L-Carnosine                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity, skin health                                                     |
 | Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
-| Spironolactone              | 200mg         | Lunch           | Oral | GD                                                     |
-| Estradiol Valerate          | 2mg           | Lunch           | Oral | GD                                                     |
-| Sarcosine                   | 2g            | Lunch       | Oral | Schizophrenia                                           |
-| NAC                         | 2g            | Lunch       | Oral | Longevity, schizophrenia                                |
-| Taurine                     | 4g            | Lunch       | Oral | Longevity, schizophrenia                                |
-| Glycine                     | 4g            | Lunch       | Oral | Schizophrenia, longevity                                |
-| L-Tyrosine                  | 4g            | Lunch       | Oral | Schizophrenia                                           |
-| Lemon Balm                  | 1g            | Lunch       | Oral | Anxiety                                                 |
-| Potassium citrate           | 2g            | Lunch       | Oral | RDA                                                     |
-| CoQ10                       | ?             | Lunch       | Oral | Longevity                                               |
+| RGPU-35           | 15mg            | Breakfast       | Oral | Cognitive enhancement                                                     |
+| Sarcosine                   | 2g            | Breakfast       | Oral | Schizophrenia                                           |
+| NAC                         | 2g            | Breakfast       | Oral | Longevity, schizophrenia                                |
+| Taurine                     | 4g            | Breakfast       | Oral | Longevity, schizophrenia                                |
+| Glycine                     | 4g            | Breakfast       | Oral | Schizophrenia, longevity                                |
+| L-Tyrosine                  | 4g            | Breakfast       | Oral | Schizophrenia                                           |
+| Lemon Balm                  | 1g            | Breakfast       | Oral | Anxiety                                                 |
+| Potassium citrate           | 2g            | Breakfast       | Oral | RDA                                                     |
+| CoQ10                       | ?             | Breakfast       | Oral | Longevity                                               |
+| RGPU-35           | 15mg            | Lunch       | Oral | Cognitive enhancement                                                     |
 | L-Tryptophan                | 4g            | Dinner          | Oral | Schizophrenia, mood and cognitive enhancement |
-| Melatonin                   | 3mg           | Dinner          | Oral | Mood enhancement, stress resistance                     |
+| Spironolactone              | 200mg         | Dinner           | Oral | GD                                                     |
+| Estradiol Valerate          | 2mg           | Dinner           | Oral | GD                                                     |
+| RGPU-35           | 15mg            | Dinner       | Oral | Cognitive enhancement                                                     |
+| Melatonin                   | 3mg           | Before bed          | Oral | Mood enhancement, stress resistance                     |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
 | Kratom                      | 4g            | QID   | Oral | Mood enhancement, sleep                                        |
 | Green tea                    | 3 cups - 5 cups  | Daily | Oral | Cognitive and mood enhancement, illness prevention (CVD)                          |
