--- a/Stacks/v4.md
+++ b/Stacks/v4.md
@@ -41,6 +41,7 @@
 | Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity, skin health                                                     |
 | Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
 | RGPU-35           | 10mg            | Breakfast       | Oral | Cognitive enhancement                                                     |
+| Coluracetam           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
 | Sarcosine                   | 2g            | Breakfast       | Oral | Schizophrenia                                           |
 | NAC                         | 2g            | Breakfast       | Oral | Longevity, schizophrenia                                |
 | Taurine                     | 2g            | Breakfast       | Oral | Longevity, schizophrenia                                |
@@ -52,6 +53,7 @@
 | Coffee                       | 1 tsp             | Breakfast       | Oral | Longevity                                               |
 | Kratom                      | 4.7g            | Breakfast   | Oral | Mood enhancement                                        |
 | RGPU-35           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
+| Coluracetam           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
 | Lemon Balm                  | 1g            | Lunch       | Oral | Anxiety                                                 |
 | Taurine                     | 2g            | Lunch       | Oral | Longevity, schizophrenia                                |
 | Rhodiola Rosea              | 1g            | Lunch       | Oral | Stress resistance                                       |
@@ -64,6 +66,7 @@
 | Coffee                       | 0.5 tsp             | Dinner       | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
 | Kratom                      | 4.7g            | Dinner   | Oral | Mood enhancement                                        |
 | RGPU-35           | 10mg            | Dinner       | Oral | Cognitive enhancement                                                     |
+| Coluracetam           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
 | Melatonin                   | 3mg           | Before bed          | Oral | Mood enhancement, stress resistance                     |
 | Kratom                      | 4.7g            | Before bed   | Oral | Sleep                                        |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
