--- a/Stacks/v4.md
+++ b/Stacks/v4.md
@@ -36,12 +36,13 @@
 | Asprin                      | 75mg          | Breakfast       | Oral | Illness prevention (heart attacks and strokes)                          |
 | Rhodiola Rosea              | 1g            | Breakfast       | Oral | Stress resistance                                       |
 | Selegiline                  | 5mg           | Breakfast       | Oral | Cognitive enhancement                                   |
-| Probiotics complex          | Various       | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement           |
+| Probiotics complex          | 1 pill       | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement           |
 | L-Carnosine                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | Astaxanthin           | 15mg            | Breakfast       | Oral | Cognitive enhancement, longevity, skin health                                                     |
 | Spermidine           | 10mg            | Breakfast       | Oral | Longevity                                                     |
-| RGPU-35           | 10mg            | Breakfast       | Oral | Cognitive enhancement                                                     |
-| Coluracetam           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
+| Bromantane           | 25mg            | Breakfast       | Oral | Cognitive enhancement                                                     |
+| Coluracetam           | 10mg            | Breakfast       | Oral | Cognitive enhancement                                                     |
+| NSI-189           | 20mg            | Breakfast       | Oral | Cognitive enhancement                                                     |
 | Sarcosine                   | 2g            | Breakfast       | Oral | Schizophrenia                                           |
 | NAC                         | 2g            | Breakfast       | Oral | Longevity, schizophrenia                                |
 | Taurine                     | 2g            | Breakfast       | Oral | Longevity, schizophrenia                                |
@@ -52,8 +53,6 @@
 | CoQ10                       | ?             | Breakfast       | Oral | Longevity                                               |
 | Coffee                       | 1 tsp             | Breakfast       | Oral | Longevity                                               |
 | Kratom                      | 4.7g            | Breakfast   | Oral | Mood enhancement                                        |
-| RGPU-35           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
-| Coluracetam           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
 | Lemon Balm                  | 1g            | Lunch       | Oral | Anxiety                                                 |
 | Taurine                     | 2g            | Lunch       | Oral | Longevity, schizophrenia                                |
 | Rhodiola Rosea              | 1g            | Lunch       | Oral | Stress resistance                                       |
@@ -65,8 +64,9 @@
 | Estradiol Valerate          | 2mg           | Dinner           | Oral | GD                                                     |
 | Coffee                       | 0.5 tsp             | Dinner       | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
 | Kratom                      | 4.7g            | Dinner   | Oral | Mood enhancement                                        |
-| RGPU-35           | 10mg            | Dinner       | Oral | Cognitive enhancement                                                     |
-| Coluracetam           | 10mg            | Lunch       | Oral | Cognitive enhancement                                                     |
+| Bromantane           | 25mg            | Dinner       | Oral | Cognitive enhancement                                                     |
+| Coluracetam           | 10mg            | Dinner       | Oral | Cognitive enhancement                                                     |
+| NSI-189           | 20mg            | Dinner       | Oral | Cognitive enhancement                                                     |
 | Melatonin                   | 3mg           | Before bed          | Oral | Mood enhancement, stress resistance                     |
 | Kratom                      | 4.7g            | Before bed   | Oral | Sleep                                        |
 | Olanzapine                  | 20mg - 40mg   | As needed       | Oral | Schizophrenia                                           |
