--- a/Stacks/v4.md
+++ b/Stacks/v4.md
@@ -28,7 +28,7 @@
 | Estradiol Valerate          | 2mg           | Breakfast       | Oral | GD                                                     |
 | Cod liver oil               | 2g            | Breakfast       | Oral | Schizophrenia, RDA, longevity                           |
 | Boron                       | 10mg          | Breakfast       | Oral | GD                          |
-| Ginko Biloba extract        | 12000mg       | Breakfast       | Oral | Schizophrenia                                           |
+| Ginko Biloba extract 50:1 extract from 12g       | 1 pill       | Breakfast       | Oral | Schizophrenia                                           |
 | Resveratrol                 | 1g            | Breakfast       | Oral | Longevity                                               |
 | NMN                         | 1g            | Breakfast       | Oral | Longevity                                               |
 | Black pepper extract        | 100mg         | Breakfast       | Oral | Nutrient absorption                                     |
