--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -16,61 +16,68 @@
 - Prevent the use of harmful hard drugs
 
 # Stack
-| Substance                                  | Amount      | When?           | ROA  | Purpose                                                  |
-| ------------------------------------------ | ----------- | --------------- | ---- | -------------------------------------------------------- |
-| Multivitamin (26 nutrients)                | 1 pill      | Breakfast       | Oral | RDA                                                      |
-| Calcium                                    | 800mg       | Breakfast       | Oral | RDA                                                      |
-| Magnesium Orotate                          | 750mg       | Breakfast       | Oral | RDA                                                      |
-| Creatine                                   | 5g          | Breakfast       | Oral | Cognitive enhancement, RDA                               |
-| AlphaGPC                                   | 1g          | Breakfast       | Oral | Cognitive enhancement, RDA                               |
-| Metformin                                  | 500mg       | Breakfast       | Oral | Longevity                                                |
-| Quercetine                                 | 500mg       | Breakfast       | Oral | Longevity                                                |
-| Glucosamine                                | 888mg       | Breakfast       | Oral | Longevity, joint health                                  |
-| Spironolactone                             | 200mg       | Breakfast       | Oral | GD                                                       |
-| Estradiol Valerate                         | 2mg         | Breakfast       | Oral | GD                                                       |
-| Cod liver oil                              | 2g          | Breakfast       | Oral | Schizophrenia, RDA, longevity                            |
-| Boron                                      | 10mg        | Breakfast       | Oral | GD                                                       |
-| Ginko Biloba extract 50:1 extract from 12g | 1 pill      | Breakfast       | Oral | Schizophrenia                                            |
-| Resveratrol                                | 1g          | Breakfast       | Oral | Longevity                                                |
-| NMN                                        | 1g          | Breakfast       | Oral | Longevity                                                |
-| Black pepper extract                       | 100mg       | Breakfast       | Oral | Nutrient absorption                                      |
-| Avocado oil (oleic acid)                   | 1g          | Breakfast       | Oral | Longevity                                                |
-| Asprin                                     | 75mg        | Breakfast       | Oral | Illness prevention (heart attacks and strokes)           |
-| Rhodiola Rosea                             | 1g          | Breakfast       | Oral | Stress resistance                                        |
-| Selegiline                                 | 5mg         | Breakfast       | Oral | Cognitive enhancement                                    |
-| Probiotics complex                         | 1 pill      | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement            |
-| L-Carnosine                                | 1g          | Breakfast       | Oral | Longevity                                                |
-| Astaxanthin                                | 15mg        | Breakfast       | Oral | Cognitive enhancement, longevity, skin health            |
-| Spermidine                                 | 10mg        | Breakfast       | Oral | Longevity                                                |
-| Bromantane                                 | 25mg        | Breakfast       | Oral | Cognitive enhancement                                    |
-| Coluracetam                                | 10mg        | Breakfast       | Oral | Cognitive enhancement                                    |
-| Sarcosine                                  | 2g          | Breakfast       | Oral | Schizophrenia                                            |
-| NAC                                        | 2g          | Breakfast       | Oral | Longevity, schizophrenia                                 |
-| Taurine                                    | 2g          | Breakfast       | Oral | Longevity, schizophrenia                                 |
-| Glycine                                    | 4g          | Breakfast       | Oral | Schizophrenia, longevity                                 |
-| L-Tyrosine                                 | 4g          | Breakfast       | Oral | Schizophrenia                                            |
-| Lemon Balm                                 | 1g          | Breakfast       | Oral | Anxiety                                                  |
-| Potassium citrate                          | 2g          | Breakfast       | Oral | RDA                                                      |
-| CoQ10                                      | ?           | Breakfast       | Oral | Longevity                                                |
-| Coffee                                     | 1 tsp       | Breakfast       | Oral | Longevity                                                |
-| PQQ                                        | 20mg        | Breakfast       | Oral | Longevity, schizophrenia                                 |
-| Nefiracetam                                | 50mg        | Breakfast       | Oral | Cognitive enhancement                                    |
-| Lemon Balm                                 | 1g          | Lunch           | Oral | Anxiety                                                  |
-| Taurine                                    | 2g          | Lunch           | Oral | Longevity, schizophrenia                                 |
-| Rhodiola Rosea                             | 1g          | Lunch           | Oral | Stress resistance                                        |
-| Coffee                                     | 1 tsp       | Lunch           | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
-| L-Carnosine                                | 1g          | Lunch           | Oral | Longevity                                                |
-| AlphaGPC                                   | 1g          | Lunch           | Oral | Cognitive enhancement                                    |
-| PQQ                                        | 20mg        | Lunch           | Oral | Longevity, schizophrenia                                 |
-| Nefiracetam                                | 50mg        | Lunch           | Oral | Cognitive enhancement                                    |
-| L-Tryptophan                               | 4g          | Dinner          | Oral | Schizophrenia, mood and cognitive enhancement            |
-| Spironolactone                             | 200mg       | Dinner          | Oral | GD                                                       |
-| Estradiol Valerate                         | 2mg         | Dinner          | Oral | GD                                                       |
-| Coffee                                     | 0.5 tsp     | Dinner          | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
-| Bromantane                                 | 25mg        | Dinner          | Oral | Cognitive enhancement                                    |
-| Coluracetam                                | 10mg        | Dinner          | Oral | Cognitive enhancement                                    |
-| Nefiracetam                                | 50mg        | Dinner          | Oral | Cognitive enhancement                                    |
-| Melatonin                                  | 3mg         | Before bed      | Oral | Mood enhancement, stress resistance                      |
-| Kratom                                     | 2g          | Every 2.5 hours | Oral | Mood, addiction                                          |
-| Olanzapine                                 | 20mg - 40mg | As needed       | Oral | Schizophrenia                                            |
-| DMHA                                       | 200mg       | Occasionally    | Oral | Cognitive and mood enhancement                           |
+| Substance                          | Amount  | When?           | ROA  | Purpose                                                  |
+| ---------------------------------- | ------- | --------------- | ---- | -------------------------------------------------------- |
+| Multivitamin (26 nutrients)        | 1 pill  | Breakfast       | Oral | RDA                                                      |
+| Calcium                            | 800mg   | Breakfast       | Oral | RDA                                                      |
+| Magnesium Orotate                  | 750mg   | Breakfast       | Oral | RDA                                                      |
+| Creatine                           | 5g      | Breakfast       | Oral | Cognitive enhancement, RDA                               |
+| AlphaGPC                           | 1g      | Breakfast       | Oral | Cognitive enhancement, RDA                               |
+| Metformin                          | 500mg   | Breakfast       | Oral | Longevity                                                |
+| Quercetine                         | 500mg   | Breakfast       | Oral | Longevity                                                |
+| Glucosamine                        | 888mg   | Breakfast       | Oral | Longevity, joint health                                  |
+| Spironolactone                     | 200mg   | Breakfast       | Oral | GD                                                       |
+| Estradiol Valerate                 | 2mg     | Breakfast       | Oral | GD                                                       |
+| Cod liver oil                      | 2g      | Breakfast       | Oral | Schizophrenia, RDA, longevity                            |
+| Boron                              | 10mg    | Breakfast       | Oral | GD                                                       |
+| Ginko Biloba 50:1 extract from 12g | 1 pill  | Breakfast       | Oral | Schizophrenia                                            |
+| Resveratrol                        | 1g      | Breakfast       | Oral | Longevity                                                |
+| NMN                                | 1g      | Breakfast       | Oral | Longevity                                                |
+| Black pepper 10:1 extract          | 20mg    | Breakfast       | Oral | Fat-soluble compound absorption                          |
+| Tumeric 35:1 extract               | 43.4mg  | Breakfast       | Oral | Longevity                                                |
+| Avocado oil (oleic acid)           | 1g      | Breakfast       | Oral | Longevity                                                |
+| Asprin                             | 75mg    | Breakfast       | Oral | Illness prevention (heart attacks and strokes)           |
+| Rhodiola Rosea                     | 1g      | Breakfast       | Oral | Stress resistance                                        |
+| Selegiline                         | 5mg     | Breakfast       | Oral | Cognitive enhancement                                    |
+| Probiotics complex                 | 1 pill  | Breakfast       | Oral | Schizophrenia, cognitive and mood enhancement            |
+| L-Carnosine                        | 1g      | Breakfast       | Oral | Longevity                                                |
+| Astaxanthin                        | 15mg    | Breakfast       | Oral | Cognitive enhancement, longevity, skin health            |
+| Spermidine                         | 10mg    | Breakfast       | Oral | Longevity                                                |
+| Bromantane                         | 25mg    | Breakfast       | Oral | Cognitive enhancement                                    |
+| Coluracetam                        | 10mg    | Breakfast       | Oral | Cognitive enhancement                                    |
+| Sarcosine                          | 2g      | Breakfast       | Oral | Schizophrenia                                            |
+| NAC                                | 2g      | Breakfast       | Oral | Longevity, schizophrenia                                 |
+| Taurine                            | 2g      | Breakfast       | Oral | Longevity, schizophrenia                                 |
+| Glycine                            | 4g      | Breakfast       | Oral | Schizophrenia, longevity                                 |
+| L-Tyrosine                         | 4g      | Breakfast       | Oral | Schizophrenia                                            |
+| Lemon Balm                         | 1g      | Breakfast       | Oral | Anxiety                                                  |
+| Potassium citrate                  | 2g      | Breakfast       | Oral | RDA                                                      |
+| CoQ10                              | ?       | Breakfast       | Oral | Longevity                                                |
+| Coffee                             | 1 tsp   | Breakfast       | Oral | Longevity                                                |
+| PQQ                                | 20mg    | Breakfast       | Oral | Longevity, schizophrenia                                 |
+| Nefiracetam                        | 50mg    | Breakfast       | Oral | Cognitive enhancement                                    |
+| Olanzapine                         | 5mg     | Breakfast       | Oral | Schizophrenia                                            |
+| L-Tryptophan                       | 2g      | Breakfast          | Oral | Schizophrenia, mood and cognitive enhancement            |
+| Lemon Balm                         | 1g      | Lunch           | Oral | Anxiety                                                  |
+| Taurine                            | 2g      | Lunch           | Oral | Longevity, schizophrenia                                 |
+| Rhodiola Rosea                     | 1g      | Lunch           | Oral | Stress resistance                                        |
+| Coffee                             | 1 tsp   | Lunch           | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
+| L-Carnosine                        | 1g      | Lunch           | Oral | Longevity                                                |
+| AlphaGPC                           | 1g      | Lunch           | Oral | Cognitive enhancement                                    |
+| PQQ                                | 20mg    | Lunch           | Oral | Longevity, schizophrenia                                 |
+| Nefiracetam                        | 50mg    | Lunch           | Oral | Cognitive enhancement                                    |
+| Black pepper 10:1 extract          | 20mg    | Lunch           | Oral | Fat-soluble compound absorption                          |
+| Tumeric 35:1 extract               | 43.4mg  | Lunch           | Oral | Longevity                                                |
+| L-Tryptophan                       | 2g      | Lunch          | Oral | Schizophrenia, mood and cognitive enhancement            |
+| L-Tryptophan                       | 2g      | Dinner          | Oral | Schizophrenia, mood and cognitive enhancement            |
+| Spironolactone                     | 200mg   | Dinner          | Oral | GD                                                       |
+| Estradiol Valerate                 | 2mg     | Dinner          | Oral | GD                                                       |
+| Coffee                             | 0.5 tsp | Dinner          | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
+| Bromantane                         | 25mg    | Dinner          | Oral | Cognitive enhancement                                    |
+| Coluracetam                        | 10mg    | Dinner          | Oral | Cognitive enhancement                                    |
+| Nefiracetam                        | 50mg    | Dinner          | Oral | Cognitive enhancement                                    |
+| Black pepper 10:1 extract          | 20mg    | Dinner          | Oral | Fat-soluble compound absorption                          |
+| Tumeric 35:1 extract               | 43.4mg  | Dinner          | Oral | Longevity                                                |
+| Melatonin                          | 3mg     | Before bed      | Oral | Mood enhancement, stress resistance                      |
+| Kratom                             | 2g      | Every 2.5 hours | Oral | Mood, addiction                                          |
+| DMHA                               | 200mg   | Occasionally    | Oral | Cognitive and mood enhancement                           |
